[gd_scene load_steps=5 format=3 uid="uid://f2iul3qdr7rl"]

[ext_resource type="Script" uid="uid://c0j6xtgtlikem" path="res://scripts/node_2d.gd" id="1_0e48y"]
[ext_resource type="Texture2D" uid="uid://cgc7nj3qi04jy" path="res://icon.svg" id="1_wtcfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e48y"]
size = Vector2(123, 121)

[sub_resource type="CircleShape2D" id="CircleShape2D_epypp"]
radius = 65.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_0e48y")

[node name="body1" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(148, 102)

[node name="CollisionShape2D" type="CollisionShape2D" parent="body1"]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_0e48y")

[node name="probe" type="Area2D" parent="body1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body1/probe"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_epypp")

[node name="Sprite2D" type="Sprite2D" parent="body1"]
position = Vector2(2, 1)
texture = ExtResource("1_wtcfe")

[node name="body2" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(522, 110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="body2"]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_0e48y")

[node name="Sprite2D" type="Sprite2D" parent="body2"]
position = Vector2(2, 1)
texture = ExtResource("1_wtcfe")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "jump
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
